fixed horizontal scrolling problems, improved stylesheet, consolidated responsive styling into the main SCSS file

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -46,11 +46,6 @@
 }
 
 @media (max-width: 576px) {
-    .container {
-        padding-left: 20px;
-        padding-right: 20px;
-    }
-
     h1 {
         font-size: 2rem;
     }
